<?xml version="1.0" encoding="utf-8"?>
<!--
  Licensed Materials - Property of IBM
  5725-K23
  (c) Copyright IBM Corp. 2013, 2014
  US Government Users Restricted Rights - Use, duplication or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <Gallery
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/textView" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/largeText"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mediumText"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/smallText"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button" />
	    
	    <ImageButton
	        android:contentDescription="@string/imageButtonDesc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_launcher" />
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/ic_launcher"
	        android:drawableRight="@drawable/ic_launcher"
	        android:text="@string/coumpoundButton" />
	    
	    <ToggleButton
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/toggleButton" />
	    
	    <ImageView
            android:contentDescription="@string/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
	
	    <MediaController
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </MediaController>
	
	    <CheckBox
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkBox" />
	
	</LinearLayout>
</ScrollView>
