<?xml version="1.0" encoding="utf-8"?>
<!--
  Licensed Materials - Property of IBM
  5725-K23
  (c) Copyright IBM Corp. 2013, 2014
  US Government Users Restricted Rights - Use, duplication or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >
    
        <EditText
            android:hint="@string/typeInputTest"
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    
        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    
        <EditText
            android:id="@+id/editText3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    
        <EditText
            android:id="@+id/editText4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    
        <EditText
            android:id="@+id/editText5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    
        <EditText
            android:id="@+id/editText6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    
        <EditText
            android:id="@+id/editText7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress" />
    
        <EditText
            android:id="@+id/editText8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    
        <EditText
            android:id="@+id/editText9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time" />
    
        <EditText
            android:id="@+id/editText10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    
        <EditText
            android:id="@+id/editText11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    
        <EditText
            android:id="@+id/editText12"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned" />
    
        <EditText
            android:id="@+id/editText13"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoCompleteTextView" />
    
        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiAutoCompleteTextView" />
    
    </LinearLayout>
</ScrollView>   
